# gazelle-test

./: BUILD.bazel  WORKSPACE
utils/: BUILD.bazel  gcs.go
utils/go/parquet-go/lib/: BUILD.bazel  gcs.go
