load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gcs.go"],
    importpath = "github.com/ascend-io/gazelle/utils/go/parquet-go/lib",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_xitongsys_parquet_go//source:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
